--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+Packaging/*
+
 # Created by https://www.toptal.com/developers/gitignore/api/xcode,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=xcode,macos
 
